--- a/src/views/DataDisplay.ejs
+++ b/src/views/DataDisplay.ejs
@@ -35,7 +35,7 @@
     <div id="response">
         <table style="display: flex; flex-flow: column; width: 95%; margin: auto;">
             <tr style="display: flex; gap: 3.6rem; padding: 2px 5px;margin: 3px; border-bottom: 1px solid gray;">
-                <th>full Name</th>
+                <th>Full Name</th>
                 <th>Email</th>
                 <th>Mobile</th>
                 <th>login Id</th>
