--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -59,31 +59,27 @@
         <input class="input-box" type="number" id="mobile" name="mobile" placeholder="Mobile No." required><br>
         <div class="error" id="error-mobile_number"></div>
 
-        <label for="street" style=" border-top: 1px solid gray; border-bottom: 1px solid gray ; border-radius: 15px; display: grid;"><span style="padding-left: 10%; margin:10px 1px; font-weight: 700; font-size: 1.2rem;">Address</span>
-            <input class="input-box" type="text" id="street" name="street" placeholder="Street" required><br>
-            <div class="error" id="error-street"></div>
+        <label for="street"><span style="padding-left: 10%; margin:10px 1px; font-weight: 700; font-size: 1.2rem;">Address</span></label><br>
+        <input class="input-box" type="text" id="street" name="street" placeholder="Street" required><br>
 
-            <input class="input-box" type="text" id="city" name="city" placeholder="City" required><br>
-            <div class="error" id="error-city"></div>
+        <input class="input-box" type="text" id="city" name="city" placeholder="City" required><br>
+        <div class="error" id="error-city"></div>
 
-            <input class="input-box" type="text" id="state" name="state" placeholder="State" required><br>
-            <div class="error" id="error-state"></div>
+        <input class="input-box" type="text" id="state" name="state" placeholder="State" required><br>
+        <div class="error" id="error-state"></div>
 
-            <input class="input-box" type="text" id="country" name="country" placeholder="Country" required><br>
-            <div class="error" id="error-country"></div>
-
-        </label><br>
+        <input class="input-box" type="text" id="country" name="country" placeholder="Country" required><br>
+        <div class="error" id="error-country"></div>
 
         <input class="input-box" type="password" id="password" name="password" placeholder="Password" required><br>
         <div class="error" id="error-password"></div>
 
         <div style="display: flex; justify-content: space-between; width: 80%; margin: auto;">
-            <a href="/data"><button
-                    style="border-radius: 15px; padding: 5% 10px; " type="button">View Data</button></a>
+            <a href="/data"><button style="border-radius: 15px; padding: 5% 10px; " type="button">View Data</button></a>
             <button style="border-radius: 15px; padding: 5px;width:20%;" type="submit">Register</button>
         </div>
     </form>
-   
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
@@ -117,7 +113,17 @@
                     error: function (xhr, status, error) {
                         const errors = xhr.responseJSON.errors;
                         $.each(errors, function (key, value) {
-                            $('#error-' + key).text(value);
+                           if(key === "address.city"){
+                            $('#error-city').text(value);
+                           }
+                           else if( key === "address.state"){
+                            $('#error-state').text(value);
+                           }
+                           else if(key === "address.country"){
+                            $('#error-country').text(value);
+                           }
+                           $('#error-' + key).text(value);
+                           
                         });
                         console.log(xhr, status, error)
                         toastr.error(error);
